--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,6 +70,7 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
+    "tsparticles": "^3.8.1",
     "tw-animate-css": "^1.2.4",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
