--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": " vite preview"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
@@ -44,29 +44,27 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
-    "tsparticles": "^3.8.1",
+    "tsparticles": "^3.8.1 |",
     "tw-animate-css": "^1.2.4",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@eslint/js": "^8.57.1",
+    "@eslint/js": "^9.0.0",             
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "@types/react-router-hash-link": "^2.4.9",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^8.57.1",
-    "eslint-plugin-react-hooks": "4.6.2",
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^9.0.0",                  
+    "eslint-plugin-react-hooks": "^5.0.0", 
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "prettier": "3.5.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^5.4.8"
   },
   "resolutions": {
-    "rimraf": "^5.0.10",
-    "glob": "^11.0.0",
-    "inflight": "^1.0.6"
+    "inflight": "^1.0.6"              
   }
 }
