--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@google/model-viewer": "^4.0.0",
     "@hookform/resolvers": "^4.1.3",
     "@tailwindcss/vite": "^4.0.15",
     "@tsparticles/engine": "3.8.1",
@@ -29,6 +30,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.6.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.484.0",
     "next-themes": "^0.4.6",
