--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,7 +51,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/react": "18.2.0",
+    "@types/react": "^18.2.0",
     "@types/react-dom": "18.2.0",
     "@types/react-router-hash-link": "^2.4.9",
     "@vitejs/plugin-react": "^4.3.1",
