--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.6.2",
     "input-otp": "^1.4.2",
+    "lightgallery": "^2.8.3",
     "lucide-react": "^0.484.0",
     "next-themes": "^0.4.6",
     "react": "18.2.0",
