--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@google/model-viewer": "^4.0.0",
     "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.15",
     "@tsparticles/engine": "3.8.1",
     "@tsparticles/interaction-external-grab": "3.7.1",
@@ -39,6 +40,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "6.22.3",
     "react-router-hash-link": "2.4.3",
@@ -47,7 +49,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
     "tsparticles": "^3.8.1 |",
-    "tw-animate-css": "^1.2.4",
+    "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
